Fix security warnings

--- a/api/ruby-heroku/Gemfile
+++ b/api/ruby-heroku/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
 
-gem 'sinatra'
-gem 'recurly'
+gem 'sinatra', '>= 1.4.7', '< 1.5'
+gem 'recurly', '>= 2.7.8', '< 2.8'
 gem 'dotenv'
