--- a/api/node/package.json
+++ b/api/node/package.json
@@ -4,7 +4,7 @@
   "description": "A simple web server to make recurly API requests",
   "main": "app.js",
   "dependencies": {
-    "node-recurly": "cgerrior/node-recurly",
+    "node-recurly": "umayr/recurly-js",
     "express": "^4.3.2",
     "body-parser": "^1.2.2",
     "node-uuid": "^1.4.1"
