--- a/api/java/pom.xml
+++ b/api/java/pom.xml
@@ -41,5 +41,10 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.10</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 </project>
