Changes electron app to use local express server

--- a/electron/package.json
+++ b/electron/package.json
@@ -9,5 +9,9 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^9.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.4"
   }
 }
