Updates PHP example - Updates Recurly client to v3 - Updates Slim from v3 to v4 - Updates /api/subscription/new to use Purchase create endpoint - Updates README

--- a/api/php/composer.json
+++ b/api/php/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-    "slim/slim": "3.*",
-    "recurly/recurly-client": "2.12.*"
+    "slim/slim": "^4",
+    "recurly/recurly-client": "^3",
+    "slim/psr7": "^1.2"
   }
 }
