--- a/api/node/docker-compose.yml
+++ b/api/node/docker-compose.yml
@@ -7,4 +7,6 @@ services:
     ports:
       - "9001:9001"
     env_file:
-      - .env
+      - ../../docker.env
+    environment:
+      - PUBLIC_DIR_PATH=/public
