dockerize java (incomplete)

--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,5 @@
-# Pass in values for configuration here
-RECURLY_SUBDOMAIN=
-RECURLY_API_KEY=
-RECURLY_PUBLIC_KEY=
-SUCCESS_URL=
-ERROR_URL=
+RECURLY_SUBDOMAIN=dbrudner
+RECURLY_API_KEY=cba86ef795a746228cbfdeadb4e488d8
+RECURLY_PUBLIC_KEY=ewr1-BrfKUWEllwCxdpRZvZloaJ
+SUCCESS_URL=http://wikipedia.com
+ERROR_URL=http://google.com
