Fix java example

--- a/api/java/Dockerfile
+++ b/api/java/Dockerfile
@@ -4,11 +4,10 @@ WORKDIR /usr/src/app
 
 COPY ./api/java .
 
-COPY ./public ./public
+COPY ./public ./src/main/resources/public
 
 RUN mvn clean compile
 
 EXPOSE 9001
 
-CMD ["mvn", "exec:java", "-Dexec.mainClass=\"com.recurly.examples.App\""]
-# CMD ["env", "mvn exec:java -Dexec.mainClass=\"com.recurly.examples.App\""]
+CMD mvn exec:java -Dexec.mainClass="com.recurly.examples.App"
