Adds comment for info on serving static files with java/spark

--- a/api/java/Dockerfile
+++ b/api/java/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /usr/src/app
 
 COPY ./api/java .
 
+# src/main/resources is the expected directory for serving static files
+# For more info, see http://sparkjava.com/documentation#static-files
 COPY ./public ./src/main/resources/public
 
 RUN mvn clean compile
