Updates docker-compose files to use volumes

--- a/api/java/Dockerfile
+++ b/api/java/Dockerfile
@@ -2,14 +2,14 @@ FROM maven:3
 
 WORKDIR /usr/src/app
 
-COPY ./api/java .
+COPY ./api/java ./java
 
 # src/main/resources is the expected directory for serving static files
 # For more info, see http://sparkjava.com/documentation#static-files
 COPY ./public ./src/main/resources/public
 
-RUN mvn clean compile
+RUN cd java && mvn clean compile
 
 EXPOSE 9001
 
-CMD mvn exec:java -Dexec.mainClass="com.recurly.examples.App"
+CMD cd java && mvn exec:java -Dexec.mainClass="com.recurly.examples.App"
