--- a/api/python/Dockerfile
+++ b/api/python/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3
 
 WORKDIR /usr/src/app
 
-COPY ./api/python .
+COPY ./api/python ./python
 
-RUN pip install -r requirements.txt
+RUN cd python && pip install -r requirements.txt
 
 COPY ./public ./public
 
 EXPOSE 9001
 
-CMD FLASK_APP=app.py flask run -p 9001 --host 0.0.0.0
+CMD FLASK_APP=python/app.py flask run -p 9001 --host 0.0.0.0
