--- a/api/java/docker-compose.yml
+++ b/api/java/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: ./api/java/Dockerfile
     volumes:
       - .:/usr/src/app/java
-      - ../../public:/usr/src/app/public
+      - ../../public:/usr/src/main/resources/public
     ports:
       - "9001:9001"
     env_file:
