Establishes public dirs more explicitly for Docker containers - Adds missing repository spec in node package.json - Fixes node package installs on final image and CMD run

--- a/api/python/docker-compose.yml
+++ b/api/python/docker-compose.yml
@@ -12,4 +12,4 @@ services:
     env_file:
       - ../../docker.env
     environment:
-      - PUBLIC_DIR_PATH=./public
+      - PUBLIC_DIR_PATH=/usr/src/app/public
