--- a/api/node/package.json
+++ b/api/node/package.json
@@ -1,5 +1,9 @@
 {
   "name": "recurly-api-example",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/recurly/recurly-integration-examples.git"
+  },
   "version": "0.0.0",
   "description": "A simple web server to make recurly API requests",
   "main": "app.js",
