--- a/api/ruby/docker-compose.yml
+++ b/api/ruby/docker-compose.yml
@@ -12,4 +12,4 @@ services:
     env_file:
       - ../../docker.env
     environment:
-      - PUBLIC_DIR_PATH=./public
+      - PUBLIC_DIR_PATH=/usr/src/app/public
