Move plan section inside form and move hidden token before submit event

--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,6 @@
 # Change these values to configure for running any of the examples with docker
-RECURLY_SUBDOMAIN=
-RECURLY_API_KEY=
-RECURLY_PUBLIC_KEY=
-SUCCESS_URL=
-ERROR_URL=
+RECURLY_SUBDOMAIN="simonplus"
+RECURLY_API_KEY="88d0528ccb39441c8ece744d46461bba"
+RECURLY_PUBLIC_KEY="ewr1-rdtsqBZmk05pArh5FBrhfJ"
+SUCCESS_URL="https://www.disneyplus.com/"
+ERROR_URL="https://www.cnn.com/"
