--- a/api/ruby/docker-compose.yml
+++ b/api/ruby/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ../..
       dockerfile: ./api/ruby/Dockerfile
     volumes:
-      - .:/usr/src/app/ruby
+      - .:/usr/src/app/api/ruby
       - ../../public:/usr/src/app/public
     ports:
       - "9001:9001"
